# cowork-pilot

./: .gitignore  AGENTS.md  CHUNK_6_REVIEW.md  README.en.md  README.md  config.toml  cowork-pilot.plugin  docs-orchestrator-design.md  docs-orchestrator-review.md  docs-restructurer.skill  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
config/: codex.sqlite3  codex.sqlite3-shm  secret_key
docs/: brief-template.md  decision-criteria.md  golden-rules.md  project-conventions.md
docs/specs/: 2026-03-24-harness-orchestrator-design.md  2026-03-25-docs-content-guide-design.md  2026-03-25-meta-agent-design.md  2026-03-25-meta-resume-design.md  2026-03-25-meta-resume-plan.md  2026-03-26-docs-restructurer-skill-design.md  2026-03-26-meta-mode-upgrades.md  auto-respond-spec.md
logs/: cowork-pilot.jsonl
skills/chunk-complete/: SKILL.md
skills/docs-orchestrator/: SKILL.md
skills/docs-restructurer/: SKILL.md
skills/vm-install/: SKILL.md
src/cowork_pilot/: brief_parser.py  completion_detector.py  config.py  dispatcher.py  docs_orchestrator.py  logger.py  main.py  (+13 more)
tests/: conftest.py  test_brief_parser.py  test_completion_detector.py  test_config.py  test_dispatcher.py  test_docs_orchestrator.py  test_harness_integration.py  test_integration.py  test_meta_runner.py  test_models.py  test_orchestrator_prompts.py  test_orchestrator_state.py  test_permission_smoke.py  test_plan_parser.py  test_quality_gate.py  test_responder.py  test_scaffolder.py  test_session_finder.py  test_session_manager.py  test_session_opener.py  test_validator.py  test_watcher.py
(+43 files in other folders)
